Implement client authentication